# COP290_SVG_Editor

./: CMakeLists.txt
include/: Canvas.hpp  GraphicsObject.hpp
src/: Canvas.cpp  FileFunctions.cpp  Parser.cpp  Shape.cpp
